--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">dvizh</string>
+    <string name="app_name">EventGO</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
@@ -28,4 +28,9 @@
     <string name="log_in_phone_mail_edit">Телефон, имя пользователя или эл. а</string>
     <string name="password_login">Пароль</string>
     <string name="remember_me_login">Запомнить меня</string>
+    <string
+        name="qr"
+        translatable="false">
+        QR
+    </string>
 </resources>
