--- a/app/src/main/res/values-kk/strings.xml
+++ b/app/src/main/res/values-kk/strings.xml
@@ -30,4 +30,5 @@
     <string name="log_in_phone_mail_edit">Телефон, имя пользователя или эл. а</string>
     <string name="password_login">Пароль</string>
     <string name="remember_me_login">Запомнить меня</string>
+    <string name="politics">Нажимая кнопку Продолжить, <u>вы соглашаетесь с политикой конфеденциальности и правилами пользования.</u></string>
 </resources>
