--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string-array name="gender">
-        <item>Муж</item>
-        <item>Жен</item>
+        <item>Мужчина</item>
+        <item>Женщина</item>
     </string-array>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_home">Home</string>
@@ -32,4 +32,7 @@
         QR
     </string>
     <string name="politics">Нажимая кнопку Продолжить, <u>вы соглашаетесь с политикой конфеденциальности и правилами пользования.</u></string>
+    <string name="choose_sex_type">Выберите пол</string>
+    <string name="type_man">Мужчина</string>
+    <string name="type_woman">Женщина</string>
 </resources>
