--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -31,4 +31,9 @@
     <string name="password_login">Password</string>
     <string name="remember_me_login">Remember me</string>
     <string name="politics">Нажимая кнопку Продолжить, <u>вы соглашаетесь с политикой конфеденциальности и правилами пользования.</u></string>
+    <string name="soon_home_page">Soon</string>
+    <string name="see_all_home_page">All</string>
+    <string name="interesting_now_home_page">Interesting now</string>
+    <string name="title_main">Main</string>
+    <string name="event_price_from">from %s ₸</string>
 </resources>
