--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -31,4 +31,9 @@
     <string name="password_login">Пароль</string>
     <string name="remember_me_login">Запомнить меня</string>
     <string name="politics">Нажимая кнопку Продолжить, <u>вы соглашаетесь с политикой конфеденциальности и правилами пользования.</u></string>
+    <string name="soon_home_page">Скоро</string>
+    <string name="see_all_home_page">Все</string>
+    <string name="interesting_now_home_page">Интересно сейчас</string>
+    <string name="title_main">Главная</string>
+    <string name="event_price_from">от %s ₸</string>
 </resources>
