--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -5,8 +5,8 @@
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
 
     <string-array name="gender">
-        <item>Муж</item>
-        <item>Жен</item>
+        <item>Мужчина</item>
+        <item>Женщина</item>
     </string-array>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_home">Home</string>
@@ -31,6 +31,9 @@
     <string name="password_login">Password</string>
     <string name="remember_me_login">Remember me</string>
     <string name="politics">Нажимая кнопку Продолжить, <u>вы соглашаетесь с политикой конфеденциальности и правилами пользования.</u></string>
+    <string name="choose_sex_type">Choose sex</string>
+    <string name="type_man">Man</string>
+    <string name="type_woman">Woman</string>
     <string name="soon_home_page">Soon</string>
     <string name="see_all_home_page">All</string>
     <string name="interesting_now_home_page">Interesting now</string>
